# HATPEHDA

./: .gitignore  CMakeLists.txt  arthur.py  causal_links_post_treatment.py  cube_test.py  kill.sh  package.xml  pyhop.py  pyra.py  reset.sh  setup.py  simple_cubes_pile.py  simple_cubes_pile_intricate.py  simple_cubes_pile_intricate_triggers.py
domains/: cube_test.py
domains/coffee/: coffee_human_no_goal.py  coffee_long_com_short_action.py
domains/cost_tests/: transportation.py
domains/cube_stack/: simple_cubes_pile.py  simple_cubes_pile_choice.py  simple_cubes_pile_choice_2_robot_actions.py  simple_cubes_pile_intricate.py  simple_cubes_pile_intricate_triggers.py
domains/directors_task/: cubes_amandine2.py  directors_task.py  directors_task_simple.py  directors_task_simple_offline.py
domains/others_anthony/: arthur.py  cube_test.py  pyra.py  stack_ex.py
domains/table_assembly/: table_assembly.py
hatpehda/: __init__.py  causal_links_post_treatment.py  gui.py  hatpehda.py  ros.py
pyhop/: __init__.py  gui.py  reg.py  ros.py  standard_domains.py
test/: tests.py
