<package format="2">
  <name>pyhop</name>
  <version>1.0.0</version>
  <description>
    Pyhop dual HTN planner
  </description>
  <maintainer email="buisanguilhem@gmail.com">Guilhem Buisan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
</package>